Frontend integration with the api

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -6,6 +6,7 @@ body {
   font: 400 14px "Roboto", sans-serif;
   background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
+  padding: 0 32px;
 }
 
 *,
